# OpenAudit

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLI_GUIDE.md  DEVELOPMENT.md  EXCELLENCE_UPGRADE.md  LICENSE  Makefile  README.md  __init__.py  bias_testing_framework.py  cli.py  cv_templates.py  debug_bias.py  demo_simple_bias_test.py  live_experiment.py  multi_llm_dispatcher.py  next-features-aspirational.md  next_steps.md  pyproject.toml  quick_view.py  reasoning_analyzer.py  requirements-dev.txt  requirements.txt  response_analyzer.py  run_openaudit.py  setup.py  unified_interface.py  web_interface.py
.github/workflows/: code-quality.yml  test.yml
archive/: OpenAudit_PRD.md
core/: README.md  __init__.py  analysis_profiles.py  base_analyzer.py  bias_testing_framework.py  cultural_context_framework.py  cultural_context_module.py  cv_templates.py  decorators.py  enhanced_statistics.py  enhanced_statistics_module.py  exceptions.py  external_module_loader.py  goal_conflict_analyzer.py  human_ai_alignment_analyzer.py  logging_config.py  model_manager.py  modular_bias_analyzer.py  module_registry.py  multi_level_classifier.py  multi_level_classifier_module.py  multi_llm_dispatcher.py  performance.py  reasoning_analyzer.py  response_analyzer.py  template_manager.py  validators.py
docs/: README.md  api-reference.md  creating-modules.md  developer-guide.md  getting-started.md
examples/: README.md  custom_bias_detector.py  getting_started.ipynb  simple_bias_check.py
external_modules/: sample_detector.manifest.json  sample_detector.py
external_modules/manifests/: sample_detector.manifest.json
runs/: bias_analysis_report_20250715_192928.txt  bias_analysis_report_20250715_222608.txt  bias_analysis_report_20250715_222830.txt  bias_analysis_report_20250715_223226.txt  bias_analysis_report_20250715_223350.txt  hiring_bias_experiment_20250715_192928.json  hiring_bias_experiment_20250715_222608.json  hiring_bias_experiment_20250715_222830.json  hiring_bias_experiment_20250715_223226.json  hiring_bias_experiment_20250715_223350.json  live_experiment_20250716_142819.json  live_experiment_20250716_143416.json  live_experiment_20250716_143712.json  live_experiment_20250716_145955.json  live_experiment_20250716_151903.json  live_experiment_2c76b273-f4cd-4d77-9ff2-5a0717ff73f1.json  live_experiment_e9cdf0c0-4d7d-4449-8245-aed3fb7dd862.json  live_experiment_report_20250716_142819.txt  live_experiment_report_20250716_143416.txt  live_experiment_report_20250716_143712.txt  live_experiment_report_20250716_145955.txt  live_experiment_report_20250716_151903.txt
templates/: dashboard.html  index.html  live_experiment.html  unified_dashboard.html
templates/archive/: README.md  live_experiment.py  openaudit_interface.py  unified_dashboard.html  unified_dashboard_working.html
templates/cv_templates/: manager_-_strong.yaml  software_engineer_-_borderline.yaml  software_engineer_-_strong.yaml
templates/prompt_templates/: company_context_gm.yaml  company_context_meta.yaml  culture_fit_emphasis.yaml  paper_binary_basic_legal.yaml  paper_binary_equity_framework.yaml  paper_binary_hidden_assumptions.yaml  paper_binary_tamkin_warning.yaml  paper_cot_tamkin_warning.yaml  paper_gm_binary.yaml  (+3 more)
tests/: README.md  __init__.py  conftest.py  run_all_tests.py
tests_backup/: __init__.py  conftest.py
utils/: README.md  __init__.py  quick_view.py  web_interface.py
